name:                deepzoom
version:             0.1.0.0
synopsis:            Deep Zoom images (DZI) utilities.
description:
    A simple library for generating Deep Zoom images (DZI) for use with
    OpenSeadragon, OpenZoom, Seadragon Ajax, Silverlight Deep Zoom, etc.
homepage:            https://github.com/gasi/deepzoom.hs
license:             MIT
license-file:        LICENSE
author:              Daniel Gasienica
maintainer:          daniel@gasienica.ch
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     DeepZoom
  other-extensions:    DeriveGeneric
  build-depends:
      base >=4.7 && <4.8
    , gd == 3000.7.3

source-repository head
  type: git
  location: https://github.com/gasi/deepzoom.hs
